# raccoon

./: CMakeLists.txt  README.md  build.bat  build.sh  test.sh
inc/: raccoon.h
inc/raccoon/: core.h  op_backward.h  raccoon.h  variable.h  version.h
inc/raccoon/auxiliary/: chainsolver.h  loss.h  tape.h
inc/raccoon/core/: core.h  variable.h  version.h
inc/raccoon/nn/: layer.h  mlp.h  neuron.h
src/raccoon/: core.c  op_backward.c  variable.c  version.c
src/raccoon/auxiliary/: chainsolver.c  loss.c  tape.c
src/raccoon/core/: core.c  variable.c  version.c
src/raccoon/nn/: layer.c  mlp.c  neuron.c
tests/: Makefile
tests/src/: main.c
